--- a/{{cookiecutter.book_slug}}/.github/workflows/book.yml
+++ b/{{cookiecutter.book_slug}}/.github/workflows/book.yml
@@ -34,5 +34,5 @@ jobs:
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.5.9
       with:
-        github_token: /${{ secrets.GITHUB_TOKEN }}
+        github_token: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
         publish_dir: ./_build/html
