simplified template, renamed book_slug to repository_name

--- a/{{cookiecutter.book_slug}}/_config.yml
+++ b/{{cookiecutter.book_slug}}/_config.yml
@@ -17,7 +17,7 @@ execute:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.book_name }}  # Online location of your book
+  url: https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.repository_name }}  # Online location of your book
   path_to_book: docs  # Optional path to your book, relative to the repository root
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
